extraer JS a fichero externo + limpiezas varias

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es" xml:lang="es">
     <head>
-        <base src="http://b5m.gipuzkoa.net/" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Gipuzkoako Bidegorriak</title>
+        
 				<link rel="stylesheet" href="css/main.css" media="screen" />
-        <script src="http://b5m.gipuzkoa.net/api/1.0/eu/library/openlayers-ext/openlayers-ext-loader.js" type="text/javascript"></script>
 
+        <script src="http://b5m.gipuzkoa.net/api/1.0/eu/library/openlayers-ext/openlayers-ext-loader.js" type="text/javascript"></script>
         <script type="text/javascript">
           OpenLayersExtLoader.load( {
             "version":  "1.0",
@@ -20,106 +20,19 @@
           });
         </script>
 
-        <script type="text/javascript">
-          ( function() {
-
-              var BIDEGORRIS_LIST = [
-                [ "0200", "BERGARA - S. PRUDENCIO (Bergara)"],
-                [ "0201", "SORALUZE PLACENCIA DE LAS ARMAS - BERGARA"],
-                [ "0202", "ERRENTERIA - OIARTZUN"],
-                [ "0203", "OIARTZUN - ARDITURRI"],
-                [ "0204", "URNIETA - ANDOAIN"],
-                [ "0205", "ARETXABALETA - EMBALSE DE URKULU"],
-                [ "0206", "RED DE ARRASATE"],
-                [ "0207", "NEKOLALDE (Bergara) - CASERIO ITURRIOZ (Antzuola)"],
-                [ "0208", "ELGOIBAR-MALZAGA (Elgoibar)"],
-                [ "0209", "ALEGIA - IKAZTEGIETA"],
-                [ "0210", "HERNANI - IGARATEGI INDUSTRIALDEA (Urnieta)"],
-                [ "0211", "RED DE IRUN"],
-                [ "0212", "LASARTE ORIA - MIRACAMPOS (Lasarte Oria)"],
-                [ "0213", "RED DE LAZKAO"],
-                [ "0214", "LAZKAO - S. MARTIN (Ataun)"],
-                [ "0215", "USURBIL - TXOKOALDE (Usurbil)"],
-                [ "0216", "VILLABONA - POLIGONO 7 (Villabona)"],
-                [ "0217", "RED DE ZUMAIA"],
-                [ "0218", "CASERIO OTZAKA (Zestoa) - ZESTOA"],
-                [ "0219", "ODRIA (Azpeitia) - AZPEITIA"],
-                [ "0220", "RED DE AZKOITIA"],
-                [ "0221", "RED DE BEASAIN"],
-                [ "0222", "MIRANDAOLA (Legazpi)"],
-                [ "0223", "LEINTZ GATZAGA - ALAVA"],
-                [ "0224", "CASERIO ZELAETA (Ormaiztegi) - ORMAIZTEGI"],
-                [ "0225", "RED DE TOLOSA"],
-                [ "0226", "AZKOITIA - ZUMARRAGA - URRETXU - LEGAZPI"],
-                [ "0227", "S. MARTIN (Ataun) - ERGOIENA (Ataun)"],
-                [ "0228", "ANDOAIN - NAVARRA"],
-                [ "0229", "RED DE DONOSTIA - SAN SEBASTIAN"],
-                [ "0230", "RED DE HONDARRIBIA"],
-                [ "0231", "RED DE ORIO"],
-                [ "0232", "EMBALSE DE ARRIARAN"],
-                [ "0233", "EMBALSE DE LAREO"],
-                [ "0234", "RED DE ZARAUTZ"],
-                [ "0235", "EMBALSE DE URTATZA"],
-                [ "0236", "EMBALSE DE IBAIEDER"],
-                [ "0237", "EMBALSE DE BARRENDIOLA"],
-                [ "0238", "EMBALSE DE AIXOLA"],
-                [ "0239", "ARRASATE MONDRAGON - ARETXABALETA"],
-                [ "0240", "ARETXABALETA - ESKORIATZA"],
-                [ "0241", "AZPEITIA - AZKOITIA"],
-                [ "0242", "RED DE HERNANI"],
-                [ "0243", "LEZO - ERRENTERIA"],
-                [ "0244", "IDIAZABAL - SEGURA"],
-                [ "0245", "SEGURA - ZEGAMA"],
-                [ "0246", "IDIAZABAL - KATEA"],
-                [ "0247", "TOLOSA - ALEGIA"],
-                [ "0248", "RED DE LASARTE-ORIA"],
-                [ "0250", "ASTIGARRAGA - MARTUTENE"],
-                [ "0251", "RED DE PASAIA"],
-                [ "0252", "RED DE ANDOAIN"]
-              ];
-
-              // -----------------------------------------------------------------------
-              function createMap() {
-                window.b5map = new OpenLayersExt.Map( "bidegorri-map", {
-                  openLayersExt: {
-                    center: {
-                      lonLat: new OpenLayers.LonLat( -240619.17999948, 5334312.9049857),
-                      zoom: 10
-                    }
-                  }
-                });
-              }
-
-              // -----------------------------------------------------------------------
-              function addBidegorris() {
-                BIDEGORRIS_LIST.each( function( bidegorriPair) {
-                  var code = bidegorriPair[ 0],
-                      name = bidegorriPair[ 1],
-                      gmlPath = "T_" + code + ".gml",
-                      gmlLayer = new OpenLayers.Layer.GML( "GML " + code, gmlPath);
-
-                  window.b5map.addLayer( gmlLayer);
-                });
-
-              }
-
-              // -----------------------------------------------------------------------
-              Event.observe( window, "load", function() {
-                createMap();
-                addBidegorris();
-              });
-          })();
-
-        </script>
-
+        <script src="js/main.js" type="text/javascript"></script>
     </head>
 
     <body>
       <h1 class="visuallyhidden">Gipuzkoako bidegorriak</h1>
-      <div id="bidegorri-map"><p class="bidegorri-logo"><img src="img/logo.png" alt="Gipuzkoako bidegorriak"></div>
+      <div id="bidegorri-map">
+        <p class="bidegorri-logo">
+          <img src="img/logo.png" alt="Gipuzkoako bidegorriak" />
+        </p>
+      </div>
 			<div class="credits">
 				<p>Hona hemen Gipuzkoako bidegorri sarearen mapa bat.</p>
-				<p>Akatsen bat du oraindik baina <a href="https://github.com/anamalagon/bidegorriak">Github</a>-en dago kodea, berrerabili edo falta diren bidegorrien <abbr title="Geography Markup Language">GML</abbr>ak gehitu nahi izanez gero. Mila esker <a href="http://www.twitter.com/aitorgr">@aitogr</a>, magiarengatik.</p>
+				<p>Akatsen bat du oraindik baina <a href="https://github.com/anamalagon/bidegorriak">Github</a>-en dago kodea, berrerabili edo falta diren bidegorrien <abbr title="Geography Markup Language">GML</abbr>ak gehitu nahi izanez gero. <!-- Mila esker <a href="http://www.twitter.com/samuraitasuna">@samuraitasuna</a>, <a href="http://www.twitter.com/aitorgr">@aitogr</a>, magiarengatik. --> </p>
 				<p>Txintxo ibili.</p> 
 			</div>
     </body>
