reorganizar GMLs + algún detalle

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="es" xml:lang="es">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="eu" xml:lang="eu">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Gipuzkoako Bidegorriak</title>
@@ -19,7 +19,6 @@
             }
           });
         </script>
-
         <script src="js/main.js" type="text/javascript"></script>
     </head>
 
