kredituak eta logoa bat

--- a/index.html
+++ b/index.html
@@ -25,15 +25,18 @@
     <body>
       <h1 class="visuallyhidden">Gipuzkoako bidegorriak</h1>
       <div id="bidegorri-map">
-        <p class="bidegorri-logo">
-          <img src="img/logo.png" alt="Gipuzkoako bidegorriak" />
-        </p>
+        <div class="credits-box">
+					<div class="credits">
+						<p class="bidegorri-logo">
+		          <img src="img/logo.png" alt="Gipuzkoako bidegorriak" />
+						</p>
+						<p>Hemen duzu Gipuzkoako bidegorri sarearen mapa bat.</p>
+						<p>Akatsen bat du oraindik baina <a href="https://github.com/anamalagon/bidegorriak">Github</a>-en dago kodea, berrerabili edo falta diren bidegorrien <abbr title="Geography Markup Language">GML</abbr>ak gehitu nahi izanez gero.</p>
+						<p>Txintxo ibili.</p> 
+					</div>
+				</div>
       </div>
-			<div class="credits">
-				<p>Hona hemen Gipuzkoako bidegorri sarearen mapa bat.</p>
-				<p>Akatsen bat du oraindik baina <a href="https://github.com/anamalagon/bidegorriak">Github</a>-en dago kodea, berrerabili edo falta diren bidegorrien <abbr title="Geography Markup Language">GML</abbr>ak gehitu nahi izanez gero. <!-- Mila esker <a href="http://www.twitter.com/samuraitasuna">@samuraitasuna</a>, <a href="http://www.twitter.com/aitorgr">@aitogr</a>, magiarengatik. --> </p>
-				<p>Txintxo ibili.</p> 
-			</div>
+			
     </body>
 </html>
 
