--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,8 @@
 			<p>Hemen duzu Gipuzkoako bidegorri sarearen mapa bat.</p>
 			<p>Akatsen bat du oraindik baina <a href="https://github.com/bardulia/bidegorriak">Github</a>-en dago kodea, berrerabili edo falta diren bidegorrien <abbr title="Geography Markup Language">GML</abbr>ak gehitu nahi izanez gero.</p>
 			<p>Txintxo ibili.</p> 
+			<p class="small-credit">Maparen datuak © <a href="http://www.openstreetmap.org/">OpenStreetMap</a>en kolaboratzaileak, <a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Creative Commons &mdash; Attribution-ShareAlike 2.0 Generic
+			  &mdash; CC BY-SA 2.0">CC BY-SA</a> lizentziapean eta <a href="http://b5m.gipuzkoa.net">b5m</a></p>
 		</div>
 	</div>
 	<script type="text/javascript">
